<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true">
    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/your_rating"
            android:id="@+id/player_a"
            android:labelFor="@string/your_rating"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/versus"
            android:id="@+id/textView"
            android:textAlignment="center"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/opponents_rating"
            android:id="@+id/textView"
            android:layout_column="2" />


    </TableRow>
        <TableRow>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="5"
                android:id="@+id/your_rating"
                android:maxLength="5" />
            

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/textView"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="5"
                android:id="@+id/opponents_rating"
                android:maxLength="5" />

        </TableRow>

    <TableRow android:gravity="fill_horizontal|fill_vertical|start">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/individual_loose_value"
        android:id="@+id/loose_button"
        android:layout_marginTop="98dp"
        android:drawableStart="@drawable/ic_loose"
        android:onClick="updateWithLoss"
        android:enabled="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/individual_draw_value"
        android:id="@+id/draw_button"
        android:enabled="true"
        android:onClick="updateWithDraw" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/individual_win_value"
        android:id="@+id/win_button"
        android:onClick="updateWithWin"
        android:drawableStart="@drawable/ic_win"/>

    </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </TableRow>

    </TableLayout>

</RelativeLayout>
